# SwissSkullStripperExtension

./: .gitignore  CMakeLists.txt  README.md
SwissSkullStripper/: CMakeLists.txt  SwissSkullStripper.cxx  SwissSkullStripper.xml  itkStripTsImageFilter.h  itkStripTsImageFilter.hxx
SwissSkullStripper/Testing/Cxx/: CMakeLists.txt
SwissSkullStripperSampleData/: CMakeLists.txt  SwissSkullStripperSampleData.py
